[package]
name = "registorder-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "registorder_map"

[dependencies]
serde = { version = "1.0.193", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.108"
serde_derive = { version = "1", default-features = false }
