[package]
name = "registorder-map"
version = "0.1.0"
authors = ["Toshio Abe<abtoc88@gmail.con>"]
edition = "2021"
description = "This map guarantees the order of registration."
license = "MIT"
homepage = "https://github.com/abtoc/registorder-map.git"
repository = "https://github.com/abtoc/registorder-map.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "registorder_map"

[dependencies]
serde = { version = "1.0.193", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.108"
serde_derive = { version = "1", default-features = false }
